[gd_scene load_steps=14 format=3 uid="uid://yt6bvqtfnq30"]

[ext_resource type="Texture2D" uid="uid://c526c5dpl2px4" path="res://assets/images/MainUIImgs/astra_processed.png" id="1_bknj3"]
[ext_resource type="Texture2D" uid="uid://mdq2iwrcinxv" path="res://assets/images/MainUIImgs/Happiness - Copie.png" id="1_gyto2"]
[ext_resource type="Script" path="res://scenes/UI/HUD/SpaceGameHUD.gd" id="1_w0uc8"]
[ext_resource type="Texture2D" uid="uid://ynmoikfm3t4j" path="res://assets/images/MainUIImgs/hunger (2).png" id="2_lepe3"]
[ext_resource type="Texture2D" uid="uid://c12sd6i45wela" path="res://assets/images/MainUIImgs/flash.png" id="4_jhaaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65vb1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_imhq2"]
texture = ExtResource("1_bknj3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cnslg"]
bg_color = Color(0.0763855, 0.715276, 0.382943, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6u55k"]
texture = ExtResource("1_gyto2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p4soi"]
texture = ExtResource("2_lepe3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ngd3s"]
texture = ExtResource("4_jhaaq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5j50l"]
bg_color = Color(0.258824, 0.298039, 0.333333, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5k54"]
bg_color = Color(0.960784, 0.929412, 0.941176, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0
offset_top = -9.0
offset_right = 1166.0
offset_bottom = 627.0
script = ExtResource("1_w0uc8")

[node name="Bg_player" type="Panel" parent="."]
layout_mode = 0
offset_left = -17.0
offset_top = 513.0
offset_right = 124.0
offset_bottom = 643.0
theme_override_styles/panel = SubResource("StyleBoxFlat_65vb1")

[node name="circle" type="Panel" parent="."]
layout_mode = 0
offset_left = -151.0
offset_top = 422.0
offset_right = 270.0
offset_bottom = 674.0
theme_override_styles/panel = SubResource("StyleBoxTexture_imhq2")

[node name="Happiness_Bar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 557.0
offset_right = 310.0
offset_bottom = 592.0
theme_override_styles/background = SubResource("StyleBoxFlat_cnslg")

[node name="Happy" type="Panel" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 562.0
offset_right = 159.0
offset_bottom = 588.0
theme_override_styles/panel = SubResource("StyleBoxTexture_6u55k")

[node name="Hunger_Bar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 594.0
offset_right = 297.0
offset_bottom = 629.0
theme_override_styles/background = SubResource("StyleBoxFlat_cnslg")
max_value = 60.0

[node name="Hunger" type="Panel" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 602.0
offset_right = 153.0
offset_bottom = 628.0
theme_override_styles/panel = SubResource("StyleBoxTexture_p4soi")

[node name="Energy_Bar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 520.0
offset_right = 295.0
offset_bottom = 555.0
theme_override_styles/background = SubResource("StyleBoxFlat_cnslg")

[node name="Energy" type="Panel" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 528.0
offset_right = 142.0
offset_bottom = 549.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ngd3s")

[node name="Action" type="Panel" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 483.0
offset_right = 1126.0
offset_bottom = 630.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5j50l")

[node name="List_Action" type="VBoxContainer" parent="Action"]
layout_mode = 0
offset_left = 323.0
offset_top = 21.0
offset_right = 628.0
offset_bottom = 155.0

[node name="Button_Spacewalks" type="Button" parent="Action/List_Action"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Spacewalks
"

[node name="Button_Zero-Gravity" type="Button" parent="Action/List_Action"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Excercise"

[node name="Button_Research and Discovery" type="Button" parent="Action/List_Action"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Research and Discovery
"

[node name="Button_Mining and Resource Gathering" type="Button" parent="Action/List_Action"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Mining and Resource Gathering
"

[node name="List_Action_2" type="VBoxContainer" parent="Action"]
layout_mode = 0
offset_left = 11.0
offset_top = 20.0
offset_right = 316.0
offset_bottom = 154.0

[node name="Button_Explore" type="Button" parent="Action/List_Action_2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Explore Galaxy"

[node name="Button_Eat" type="Button" parent="Action/List_Action_2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Eat"

[node name="Button_Rest" type="Button" parent="Action/List_Action_2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Rest
"

[node name="Button_Stargazing" type="Button" parent="Action/List_Action_2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_y5k54")
text = "Stargazing "
